# Domain-decomposition-dynamical-low-rank-method-for-the-radiative-transfer-equation

./: .gitignore  README.md  pyproject.toml
DLR_rt/examples/: dlr_2x1d_dd_hohlraum_splitting.py  dlr_2x1d_dd_lattice_splitting.py  dlr_2x1d_periodic_spacedepcoeff.py  main.py
DLR_rt/examples/d1x1/: classic_periodic.py  dlr_dd.py  dlr_dd_4domains.py  dlr_inflow.py  dlr_periodic.py
DLR_rt/examples/d2x1/: dlr_2x1d_dd_splitting.py  dlr_2x1d_dd_xy_splitting.py  dlr_2x1d_periodic.py
DLR_rt/examples/publication/: dlr_2x1d_dd_hohlraum_splitting.py  dlr_2x1d_dd_lattice_splitting.py  dlr_2x1d_dd_linesource_splitting.py  dlr_2x1d_periodic_spacedepcoeff.py
DLR_rt/src/: grid.py  initial_condition.py  integrators.py  lr.py  run_functions.py  util.py
DLR_rt/tests/: test_2x1d.py
